完善并增加单元测试